# HevcEncoder

./: CMakeLists.txt  README  main.cpp
AVStreamer/: CMakeLists.txt  main.c
